--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
     <div class="form-group">
         <button type="submit" class="btn tr_bg btn-block text-white"> Log In   </button>
     </div> <!-- form-group// -->      
-    <p class="text-center">Creat an account? <a href="registration.php">Register</a> </p>                                                                 
+   <p class="text-center">Creat an account? <a href="registration.html">Register</a> </p>                                                                  
 </form>
 </article>
 </div> <!-- card.// -->
