--- a/registration.html
+++ b/registration.html
@@ -50,7 +50,7 @@
     <div class="form-group">
         <button type="submit" class="btn tr_bg btn-block text-white"> Create Account  </button>
     </div> <!-- form-group// -->      
-    <p class="text-center">Have an account? <a href="login.php">Log In</a> </p>                                                                 
+   <p class="text-center">Have an account? <a href="login.html">Log In</a> </p>                                                                  
 </form>
 </article>
 </div> <!-- card.// -->
