--- a/gallery.html
+++ b/gallery.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" type="text/css" href="css/tsstyle.css">
 </head>
 <body>
-<header id="gl_img">
+<header>
 <nav class="navbar  navbar-expand-lg navbar-dark bg-dark1  fixed-top" >
-  <a class="navbar-brand text-uppercase ml-5 animated infinite heartBeat " href="#" style="color:  #fff ;"><img src="img/logo.png" style="height: 50px; width: 60px;">
+  <a class="navbar-brand text-uppercase ml-5 animated infinite heartBeat " href="#" >
     save animal
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tigercontent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +42,7 @@
     </form>
   </div>
 </nav>
+<div class="container-fluid" id="gl_img"></div>
 </header>  
   <div class="container mb-5">
     <h2 class="text-capitalize text-center h1 pt-4"> our gallery</h2>
