--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>www.savetiger.com</title>
+	<title>www.savean.com</title>
    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -11,8 +11,8 @@
 </head>
 <body>  
 <header class="changebackground">
-	<nav class="navbar  navbar-expand-lg navbar-dark bg-dark1  fixed-top" >
-  <a class="navbar-brand text-uppercase ml-5 animated infinite heartBeat " href="#" style="color:  #fff ;"><img src="img/logo.png" style="height: 50px; width: 60px;">
+<nav class="navbar  navbar-expand-lg navbar-dark bg-dark1 fixed-top " >
+  <a class="navbar-brand text-white text-uppercase  animated infinite heartBeat " href="#">
     save animal
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tigercontent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,8 +48,8 @@
           <h3>welcome to india zoo</h3>
           <h1>do come & visit<span class="change_content"></span></h1>
           <p>"india once is not enough"</p>
-          <a href="login.html" class="btnone">login here</a>
-          <a href="registration.html" class="btntwo">signup here</a>
+          <a href="login.html" target="_blank" class="btnone">login here</a>
+          <a href="registration.html" target="_blank" class="btntwo">signup here</a>
         </section>
       </main>     
 </header>
@@ -94,7 +94,7 @@
     </div>
     <div class="row text-white">
       <div class="col-md-12">
-       <div class="tr_fa_icon"style="margin-left: -5%;">
+       <div class="tr_fa_icon" style="margin-left: -5%;">
          <ol>
           <li><i class="fa fa-bicycle tr_i"></i></li>
           <li><i class="fa fa-camera-retro tr_i"></i></li>
