--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" type="text/css" href="css/tsstyle.css">
 </head>
 <body>
- <header id="about_img">
+ <header >
 <nav class="navbar  navbar-expand-lg navbar-dark bg-dark1  fixed-top" >
-  <a class="navbar-brand text-uppercase ml-5 animated infinite heartBeat " href="#" style="color:  #fff ;"><img src="img/logo.png" style="height: 50px; width: 60px;">
+  <a class="navbar-brand text-white text-uppercase ml-5 animated infinite heartBeat " href="#">
     save animal
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tigercontent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,6 +43,7 @@
     </form>
   </div>
 </nav>
+<div class="container-fluid" id="about_img"></div>
 </header> 
 <div class=" container">
 		<h2 class="text-capitalize text-center h1 pt-5">about  us</h2>
